--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,41 +1,59 @@
-
-
-
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand">Mongo Scraper</a>
     </div>
     <ul class="nav navbar-nav">
-           <form class="create-update-form" action="/home" method="GET">
+      <form class="create-update-form" action="/home" method="GET">
         <button type="submit" class="btn btn-primary user-settings">Home</button>
       </form>
-            <form class="create-update-form" action="/savedarticle" method="GET">
+      <form class="create-update-form" action="/savedarticle" method="GET">
         <button type="submit" class="btn btn-primary user-settings">Saved Article</button>
       </form>
       <li>
-      <form class="create-update-form" action="/scrape" method="GET">
-        <button type="submit" class="btn btn-primary user-settings">Scrape New Articles</button>
-      </form>
-    </li>
+        <form class="create-update-form" action="/scrape" method="GET">
+          <button type="submit" class="btn btn-primary user-settings">Scrape New Articles</button>
+        </form>
+      </li>
     </ul>
   </div>
 </nav>
 <div class="container">
-<div class="row">
- 	<h1 class = "center-block"> Los Angeles Times
-</div>
-<div class="col-sm-12 text-center" class="task">
-	{{#each this}}
-		{{#if this.saved}}
-	   <div class="panel panel-primary">
-      <div class="panel-heading">{{this.title}}
-      <button type="button" class="btn btn-primary" id="notes" data-id= "{{this._id}}">Article Notes</button>
-      <button type="button" class="btn btn-primary" id="deletearticle" data-id= "{{this._id}}">Delete Article</button>
+<!-- Trigger the modal with a button -->
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Modal Header</h4>
       </div>
-      <div class="panel-body">{{this.link}} 
+      <div class="modal-body">
+        <p>Some text in the modal.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
-    {{/if}}
-    {{/each}}
+
+  </div>
 </div>
+  <div class="row">
+    <h1 class = "center-block"> Los Angeles Times </h1>
+    <div class="col-sm-12 text-center" class="task">
+      {{#each this}}
+      {{#if this.saved}}
+      <div class="panel panel-primary">
+        <div class="panel-heading">{{this.title}}
+          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add Note</button>
+          <button type="button" class="btn btn-success" id="deletearticle" data-id= "{{this._id}}">Delete Article</button>
+        </div>
+        <div class="panel-body">{{this.link}}
+        </div>
+      </div>
+      {{/if}}
+      {{/each}}
+    </div>
+  </div>
