--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -19,35 +19,40 @@
   </div>
 </nav>
 <div class="container">
-<!-- Trigger the modal with a button -->
+
+  <div class="row">
+    <h1 class = "center-block"> Los Angeles Times </h1>
+    <div class="col-sm-12 text-center" class="task">
+      {{#each data}}
+      {{#if this.saved}}
+      <!-- Trigger the modal with a button -->
 <!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
+<div id={{this.title}} class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
+        <h4 class="modal-title">{{this.title}}</h4>
       </div>
       <div class="modal-body">
-        <p>Some text in the modal.</p>
+        <div class="panel panel-default">
+  <div class="panel-body">A Basic Panel</div>
+</div>
+        <textarea rows = "7" cols = "25">Type in note </textarea>
       </div>
       <div class="modal-footer">
+         <button type="button" class="btn btn-default">Add</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
 
   </div>
 </div>
-  <div class="row">
-    <h1 class = "center-block"> Los Angeles Times </h1>
-    <div class="col-sm-12 text-center" class="task">
-      {{#each this}}
-      {{#if this.saved}}
       <div class="panel panel-primary">
         <div class="panel-heading">{{this.title}}
-          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add Note</button>
+          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target=#{{this.title}}>Add Note</button>
           <button type="button" class="btn btn-success" id="deletearticle" data-id= "{{this._id}}">Delete Article</button>
         </div>
         <div class="panel-body">{{this.link}}
