--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -19,37 +19,33 @@
   </div>
 </nav>
 <div class="container">
-
   <div class="row">
     <h1 class = "center-block"> Los Angeles Times </h1>
     <div class="col-sm-12 text-center" class="task">
       {{#each data}}
       {{#if this.saved}}
       <!-- Trigger the modal with a button -->
-<!-- Modal -->
-<div id={{this.title}} class="modal fade" role="dialog">
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">{{this.title}}</h4>
+      <!-- Modal -->
+      <div id={{this.title}} class="modal fade" role="dialog">
+        <div class="modal-dialog">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">{{this.title}}</h4>
+            </div>
+            <div class="modal-body">
+              <div class="panel panel-default">
+                <div class="panel-body">{{this.note}} <button type="button" class="btn btn-default" id= "deleteNote" data-id="{{this.note}}">delete</button></div>
+              </div>
+              <textarea rows = "7" cols = "25" id = "bodyinput" name = "body">Type in note </textarea>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" id= "addNote" data-id="{{this._id}}">Add Note</button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="modal-body">
-        <div class="panel panel-default">
-  <div class="panel-body">A Basic Panel</div>
-</div>
-        <textarea rows = "7" cols = "25">Type in note </textarea>
-      </div>
-      <div class="modal-footer">
-         <button type="button" class="btn btn-default">Add</button>
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-
-  </div>
-</div>
       <div class="panel panel-primary">
         <div class="panel-heading">{{this.title}}
           <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target=#{{this.title}}>Add Note</button>
